added sum request
